Appears we need a version.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@wikipathways/gpml",
+  "version": "1.0.1",
   "description": "Schemas and test cases for GPML XML file format.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
