Ignore JSON files.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@wikipathways/gpml",
   "version": "1.0.1",
+  "files": [
+    "test",
+    "yarn.lock"
+  ],
   "description": "Schemas and test cases for GPML XML file format.",
   "scripts": {
+    "prepare": "npm-run-all prepare:* && echo ok || echo not ok",
+    "prepare:gpml2pvjson": "echo 'Setting expected JSON versions of GPML files' && source_dirname=./test; for source_file in $source_dirname/**/*.gpml*; do output_file=`echo $source_file | sed 's/\\.xml//' | sed 's/\\.gpml//'`\".json\"; echo $output_file; cat \"$source_file\" | gpml2pvjson > \"$output_file\"; done && echo ok || echo not ok",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +25,9 @@
   "bugs": {
     "url": "https://github.com/ariutta/GPML/issues"
   },
-  "homepage": "https://github.com/ariutta/GPML#readme"
+  "homepage": "https://github.com/ariutta/GPML#readme",
+  "dependencies": {
+    "gpml2pvjson": "3.0.0-2",
+    "npm-run-all": "^4.1.2"
+  }
 }
