--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@wikipathways/gpml",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "files": [
+    "*.xsd",
     "test",
     "yarn.lock"
   ],
